# duration-parts

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
examples/: custom_formatter.rs
src/: lib.rs
src/formatter/: format_en_us_unsigned_natural.rs  format_zh_tw_unsigned_natural.rs  helpers.rs  mod.rs
src/parts/: duration_parts.rs  error.rs  mod.rs  sign.rs
src/support/: mod.rs
src/support/chrono/: mod.rs
src/support/core_duration/: mod.rs
src/support/jiff/: mod.rs
src/support/time/: mod.rs
tests/: parts.rs
